fixed text wrap

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,7 @@ a:visited{
   position: absolute;
   height: 100px;
   width: 100%;
+  min-width: 700px;
   top: 0;
   left: 0;
   right: 0;
